# ALiBaVa_Analysis_GUI

./: ALiBaVaReaderGUI.pro  ALiBaVaReaderGUI.pro.user.66f0563  ALiBaVaReaderGUI.pro.user.8f097b8  Makefile  OverlayList.txt  README.md  alibava_ped.ped  main.cpp  previousSettings.txt  previousSettings1.txt  untitled.sublime-workspace  window.cpp  window.h  windownewchannels.h  windoworiginal.h  windoworiginalchannels.h
root_macros/: AsciiRoot.h  AsciiRoot.lo  AsciiRootoriginalchannels.cc  ChanList.h  ChanList.lo  Data.h  DataFileRoot.cc  DataFileRoot.h  DataFileRoot.lo  HDFRoot.cc  HDFRoot.h  HDFRoot.lo  Hit.lo  JamesChanList  Makefile  Makefile.am  Makefile.in  Tracer.cc  Tracer.lo  UserMakefile  alibava.root  alibavaCint.cc  alibavaCint.h  alibavaCint.lo  alibava_linkdef.h  analysis.cc  analysis.h  analysis.lo  compile.C  compile_macro  crrc.cc  crrc.h  crrc.lo  dbg_lib.cc  dump_data.C  fix_header.C  rootlogon.C  run_analysis  run_analysis.cc  run_analysis.cc~  (+3 more)
root_macros/.deps/: AsciiRoot.Plo  ChanList.Plo  DataFileRoot.Plo  HDFRoot.Plo  Hit.Plo  Tracer.Plo  alibavaCint.Plo  analysis.Plo  crrc.Plo  run_analysis.Po  utils.Plo
root_macros/.libs/: libAlibavaRoot.la  libAlibavaRoot.lai  lt-run_analysis  run_analysis
